2010-01-16  Kaz Kylheku  <kkylheku@gmail.com>

	Regex syntactic tweaks: support the [] syntax
	to match no character and [^] as its complement,
	being synonymous with the wildcard dot.

	* parser.y (regterm): Added new productions.

	* txr.1: Documented.

2010-01-16  Kaz Kylheku  <kkylheku@gmail.com>

	Version 028.

	Code cleanup.

	New additional regex implementation using regex derivatives,
	providing new operators: regex complement, intersection,
	non-greedy match.

	Regex syntax bugfixes.

	* txr.c (version): Bumped to 027.

	* txr.1: Bumped version to 027.

	* configure: Bumped txr_ver to 027.

	* match.c (dest_bind): Remove spurious syntax.

2010-01-15  Kaz Kylheku  <kkylheku@gmail.com>

	* txr.1: Get rid of parens from regex operator descriptions.
	Correct wrong text: all operators can take an empty regex.
	Clarify escaping rules within a character class.
	Describe Kleene and non-greedy behavior more accurately.

2010-01-15  Kaz Kylheku  <kkylheku@gmail.com>

	* genman.txr, txr.1: Encode version differently; extract
	from text during HTML conversion.

2010-01-15  Kaz Kylheku  <kkylheku@gmail.com>

	Automate the maintenance of the HTML-ized man page.

	* Makefile (txr-manpage.html): New target, generated from txr.1
	man page.

	* genman.txr: New txr query to transform the output of man2html.

2010-01-15  Kaz Kylheku  <kkylheku@gmail.com>

	Implemented non-greedy operator.

	* lib.c (nongreedy_s): New symbol globals.
	(obj_init): New symbol interned.

	* lib.h (nongreedy_s): Declared.

	* parser.l (grammar): Support % as a regex operator.

	* parser.y (grammar): Define '%' nonterminal,
	on th esame precedence level as '*'.
	(regterm): Add the % expression as a term.
	(regchar): Recognize % as ordinary character in a character
	class. Also, bugfix: recognize & and ~ similarly.

	* regex.c (dv_compile_regex): Implement % as a syntactic sugar
	via an algebraic transformation to a more complex expression.